[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runapi-grok-imagine"
version = "0.1.0"
description = "Grok-Imagine multimodal generation client for RunAPI"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "RunAPI", email = "contact@runapi.ai" }]
keywords = ["runapi", "grok-imagine", "text-to-video", "image-to-video", "text-to-image", "ai", "sdk"]
dependencies = ["runapi-core"]

[project.urls]
Homepage = "https://runapi.ai/models/grok-imagine"
Documentation = "https://runapi.ai/docs#sdk-grok-imagine"

[tool.hatch.build.targets.wheel]
packages = ["src/runapi"]

[tool.uv]
package = true

[tool.uv.sources]
runapi-core = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]

[tool.runapi]
slug = "grok-imagine"
